--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
@@ -93,6 +97,11 @@
             <artifactId>sqljdbc4</artifactId>
             <version>${SQLServer.version}</version>
         </dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
         <!-- DruidDataSource -->
         <dependency>
             <groupId>com.alibaba</groupId>
