--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 		<oracle.version>10.2.0.4.0</oracle.version>
 		<SQLServer.version>4.0</SQLServer.version>
 		<!-- set thymeleaf version -->
-		<thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
-		<thymeleaf-layout-dialect.version>2.0.0</thymeleaf-layout-dialect.version>
+		<thymeleaf.version>2.1.5.RELEASE</thymeleaf.version>
+		<thymeleaf-layout-dialect.version>2.2.2</thymeleaf-layout-dialect.version>
 		<skipTests>true</skipTests>
 	</properties>
 
@@ -113,6 +113,11 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
 		</dependency>
 	</dependencies>
 
